[project]
name = "opencircle"
version = "0.1.0"
description = "OpenCircle"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "uuid (>=1.30,<2.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "detoxify (>=0.5.2,<0.6.0)",
    "better-profanity (>=0.7.0,<0.8.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
    "cryptography (>=46.0.3,<47.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
